; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_sha1.c_sha1_file.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_sha1.c_sha1_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sha1_file(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca [1024 x i32], align 16
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32* @fopen(i8* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %11, i32** %6, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %31

14:                                               ; preds = %2
  %15 = call i32 @sha1_starts(i32* %8)
  br label %16

16:                                               ; preds = %21, %14
  %17 = getelementptr inbounds [1024 x i32], [1024 x i32]* %9, i64 0, i64 0
  %18 = load i32*, i32** %6, align 8
  %19 = call i64 @fread(i32* %17, i32 1, i32 4096, i32* %18)
  store i64 %19, i64* %7, align 8
  %20 = icmp ugt i64 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %16
  %22 = getelementptr inbounds [1024 x i32], [1024 x i32]* %9, i64 0, i64 0
  %23 = load i64, i64* %7, align 8
  %24 = trunc i64 %23 to i32
  %25 = call i32 @sha1_update(i32* %8, i32* %22, i32 %24)
  br label %16

26:                                               ; preds = %16
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @sha1_finish(i32* %8, i32* %27)
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @fclose(i32* %29)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %26, %13
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @sha1_starts(i32*) #1

declare dso_local i64 @fread(i32*, i32, i32, i32*) #1

declare dso_local i32 @sha1_update(i32*, i32*, i32) #1

declare dso_local i32 @sha1_finish(i32*, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
